src/assets/css/app.css
@import url('https://fonts.googleapis.com/css?family=Righteous');
@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');


/* GLOBAL
----------------------------- */

html {
    overflow: hidden;
}


/* CUSTOM CLASSES
----------------------------- */

.app-block {
    font-family: 'Comfortaa', cursive;
    position: relative;
    z-index: 2;
}
.app-block, .px-app {
    padding-left: 15% !important;
    padding-right: 15% !important;
}
.app-block, .py-app {
    padding-top: 6% !important;
    padding-bottom: 6% !important;
}

.block-title {
    margin-bottom: 2.5rem;
}
.block-title .title {
    color: #55b4b0;
    font-family: 'Righteous', cursive !important;
    font-size: 1.8rem !important;
    font-weight: initial;
    text-transform: uppercase;
}

.font-righteous {
    font-family: 'Righteous', cursive !important;
}

.h-100 {
    height: 100% !important;
}


/* AppBar
----------------------------- */

.nav-link {
    color: initial !important;
    font-size: 1.2rem;
    text-decoration: none;
}

.logo {
    background-color: #fff;
    border: 1px solid #999;
    border-radius: 50%;
    margin: 0 auto;
    padding: .3rem;
    width: min-content;
}


/* AppBody
----------------------------- */

.app-body {
    position: relative;
    z-index: 0;
}

.app-container {
    height: 100%;
    max-width: 100% !important;
}

/* Banner */
.v-parallax__image-container {
    position: fixed !important;
}
.banner-title {
    font-size: 3.8rem;
}
.banner-subtitle {
    font-size: 2.8rem;
}

/* AboutMe */
.profile {
    border-radius: 50%;
}
.information-description {
    line-height: 1.8rem;
}

/* Course */
.v-timeline-item__opposite {
    line-height: initial;
}
.timeline-title {
    word-break: initial;
}

/* Projects */
.project {
    opacity: .7;
    transition: opacity .4s ease-in-out;
}
.project:hover {
    opacity: initial;
}
.project-title {
    font-size: 1.3rem;
}
.project-img {
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
}

